--- a/src/templates/src/golf_classic.html
+++ b/src/templates/src/golf_classic.html
@@ -26,7 +26,29 @@
         </button>
         <div class="row">
             <div class="col-9">
-                <img src="/static/images/golf/{{year}}/header-img.jpg" style="width: 85%; padding-bottom: 1rem;" class="mx-auto d-block">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="height: 400px !important">
+                    
+                    <div class="carousel-inner"  style="height: 100% !important">
+                        {% for e in event_images %}
+                            <div class="carousel-item {{e.visible}}" style="height: 100% !important">
+                                <img src="{{e.link}}" style="width: 85%; padding-bottom: 1rem;" class="mx-auto d-block">
+                            </div>
+                        {% endfor %}
+                    </div>
+
+                    {% if event_images|length > 1 %}
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    {% endif %}
+
+                </div>
+                
                 <div class="row">
                     <div class="col-8">
                         {% for description_paragraph in descr %}
