--- a/src/templates/src/golf_classic.html
+++ b/src/templates/src/golf_classic.html
@@ -68,7 +68,7 @@
             </div> 
             <div class="col-3">
                 {% for im in sponsor_images %}
-                    <img src="{{im}}" style="width: 100%;">
+                    <img src="{{im.link}}" style="width: 100%;">
                 {% endfor %}
             </div> 
         </div> 
