--- a/src/templates/src/golf_classic_involvement.html
+++ b/src/templates/src/golf_classic_involvement.html
@@ -19,9 +19,34 @@
 
     
     </script>
+
+    <style>
+        .registration_btn{
+            border-radius: 25px;
+            min-width: 2.5rem;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+            height: 2rem;
+        }
+        .form-row {
+            display: flex;
+            padding-bottom: 0.5rem;
+            /* justify-content: flex-end; */
+        }
+        .form-row > label {
+            flex: 1;
+        }
+        .form-row > input {
+            flex: 2; 
+        }
+        .in_form{
+            padding-left: .25rem;
+        }
+    </style>
     <!-- <script src="/static/scripts/client.js" defer></script> -->
     <div class="container">
-        <h4>Golf Registration</h4>
+        <br>
+        <h3>Golf Registration</h3>
         <div class="card">
             <div class="card-body">
                 <div class="row">
@@ -37,23 +62,32 @@
                         <div id="single_div" style="display:none">
                             <form id="payment-form" action="/create-checkout-session-view?type=1s&date_code={{date_code}}" method="POST">
                                 {% csrf_token%}
-                                <label>Contact Email:</label>
-                                <input type="text" name="email" id="email" value="{{data.course}}"><br>
-                                <label>Golfer First Name:</label>
-                                <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
-                                <label>Golfer Last Name:</label>
-                                <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
-                                <button type="submit">Checkout</button>
-                                <button onclick="open_form('single_div_btn','single_div')" type="button">Close</button>
+                                <ul class="in_form">
+                                    <li class="form-row">
+                                        <label>Contact Email:</label>
+                                        <input type="text" name="email" id="email" value="{{data.course}}"><br>
+                                    </li>
+                                    <li class="form-row">
+                                        <label>Golfer First Name:</label>
+                                        <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
+                                    </li>
+                                    <li class="form-row">
+                                        <label>Golfer Last Name:</label>
+                                        <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
+                                    </li>
+                                </ul>
+                                <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
+                                <button class="registration_btn yellow_background" onclick="open_form('single_div_btn','single_div')" type="button">X</button>
                             </form>
                         </div>
                         <div id="single_div_btn">
-                            <button onclick="open_form('single_div', 'single_div_btn')">Register</button>
+                            <button class="registration_btn yellow_background" onclick="open_form('single_div', 'single_div_btn')">Register</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
         <div class="card">
             <div class="card-body">
                 <div class="row">
@@ -66,33 +100,29 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <div id="foursome_div" style="display:none">
+                        <div id="foursome_div" style="display:none" class="row">
                             <form id="payment-form" action="/create-checkout-session-view?type=4s&date_code={{date_code}}" method="POST">
                                 {% csrf_token%}
-                                <label>Contact Email:</label>
-                                <input type="text" name="email" id="email" value="{{data.course}}"><br>
-                                <label>Golfer 1 First Name:</label>
-                                <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
-                                <label>Golfer 1 Last Name:</label>
-                                <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
-                                <label>Golfer 2 First Name:</label>
-                                <input type="text" name="fname_2" id="fname_2" value="{{data.course}}"><br>
-                                <label>Golfer 2 Last Name:</label>
-                                <input type="text" name="lname_2" id="lname_2" value="{{data.course}}"><br>
-                                <label>Golfer 3 First Name:</label>
-                                <input type="text" name="fname_3" id="fname_3" value="{{data.course}}"><br>
-                                <label>Golfer 3 Last Name:</label>
-                                <input type="text" name="lname_3" id="lname_3" value="{{data.course}}"><br>
-                                <label>Golfer 4 First Name:</label>
-                                <input type="text" name="fname_4" id="fname_4" value="{{data.course}}"><br>
-                                <label>Golfer 4 Last Name:</label>
-                                <input type="text" name="lname_4" id="lname_4" value="{{data.course}}"><br>
-                                <button type="submit">Proceed to Secure Checkout</button>
-                                <button onclick="open_form('foursome_div_btn','foursome_div')" type="button">Close Registration Panel</button>
+                                <ul class="in_form">
+                                    <li class="form-row">
+                                        <label>Contact Email:</label>
+                                        <input type="text" name="email" id="email" value="{{data.course}}"><br>
+                                    </li>
+                                    <li class="form-row">
+                                        <label>Main Golfer First Name:</label>
+                                        <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
+                                    </li>
+                                    <li class="form-row">
+                                        <label>Main Golfer Last Name:</label>
+                                        <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
+                                    </li>
+                                </ul>
+                                <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
+                                <button class="registration_btn yellow_background" onclick="open_form('foursome_div_btn','foursome_div')" type="button">X</button>
                             </form>
                         </div>
                         <div id="foursome_div_btn">
-                            <button onclick="open_form('foursome_div', 'foursome_div_btn')">Register</button>
+                            <button class="registration_btn yellow_background" onclick="open_form('foursome_div', 'foursome_div_btn')">Register</button>
                         </div>
                     </div>
                 </div>
